# DataStructure

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  fifo  fifo.cpp  list.cpp  stack  stack.cpp
include/: satck.h  test.h
src/: main.cpp
tests/: test.cpp
